--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,17 +5,20 @@ resources:
 - bases/cloud.redhat.com_frontends.yaml
 - bases/cloud.redhat.com_frontendenvironments.yaml
 - bases/cloud.redhat.com_bundles.yaml
+- bases/cloud.redhat.com_navtemplates.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_frontends.yaml
+#- patches/webhook_in_navtemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_frontends.yaml
+#- patches/cainjection_in_navtemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
