--- a/examples/inventory.yaml
+++ b/examples/inventory.yaml
@@ -32,7 +32,7 @@ spec:
       icon: "InsightsIcon"
       product: "Red Hat Insights"
       subtitle: "Red Hat Insights for RHEL"
-      description: "Review package applicability on your Red Hat Enterprise Linux systems.""
+      description: "Review package applicability on your Red Hat Enterprise Linux systems."
     - id: "repositories"
       appId: "contentSources"
       title: "Repositories"
@@ -66,3 +66,10 @@ spec:
       module: "./RootApp"
       routes:
       - pathname: /insights/inventory
+  chromeNavigation:
+    - bundle: insights
+      sectionId: foo-bar
+      navItems:
+        - id: inventory
+          title: "Foo bar Inventory"
+          href: /apps/inventory
