--- a/examples/landing.yaml
+++ b/examples/landing.yaml
@@ -36,4 +36,14 @@ spec:
         - id: landing
           title: "Landing section"
           href: /apps/landing
+        - id: bar
+          title: "Some new link"
+          expandable: true
+          routes:
+            - id: foo
+              title: "Foo"
+              href: /HULAHUP
+        - id: baz
+          title: "Some new link"
+          href: /baz
 
